--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
     <!-- No olvides de añadir el link de tu hoja de estilos -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
+    <header> <!-- header es el contenedor padre y img y nav los hijos-->
+      <img src="images/spotify-logo.png" alt="spotify-logo" midth="200" height="60">
+      <nav>
+        <ul class="navegacion-header">
+         <li><a href="#">Premium</a></a></li> <!--la etiqueta a es para los enlaces-->
+         <li><a href="#">Discover</a></li>
+         <li><a href="#">Help</a></li>
+         <li><a href="#">Download</a></li>
+        </ul>
+       </nav>
+    </header>
+
+
+    <main>Este es el contenido principal</main>
+
+
+
+  
+  
+    <footer>Esto es el footer</footer>
+
+
     Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
     right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
     Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
